# jira-analysis

./: .gitignore  app.py  cli.py  pyproject.toml  readme.md  setup.py
src/analyzer/: converter.py
src/scraper/: formatters.py  init_custom_fields.py  printer.py  requester.py
src/visualizer/: comment_stats.py  developer_performance.py  fix_versions_kpi.py  priority_icons.py  ticket_distribution.py  ticket_linkage.py
