[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-scraper"
version = "0.1.0"
description = "A tool for scraping Jira data"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "python-dotenv",
    "requests",
    "halo",
    "rich",
    "streamlit",
    "pandas",
    "plotly",
    "calplot",
    "numpy",
]
